--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
                 <div class="sidebar"><i class="fa fa-bars" aria-hidden="true"></i></div>
             </div>
             <div class="secondNav">
-                <nav class="navbar navbar-expand-sm-md-lg-xl navBg">
+                <!-- <nav class="navbar navbar-expand-sm-md-lg-xl navBg">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link navActive" href="#">ROLES</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
+                <div class="secContent">ROLES</div>
                 
             </div>
             <div class="secondSideNav">
