--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                                 </div>
                                 <div class="formFooter">
                                     <div class="row">
-                                        <div class="col-lg-3 createBtn">
+                                        <div class="col-3 col-sm-3 col-md-3 col-lg-3 createBtn">
                                             <button type="submit" class="btn btn-primary">Create</button></div>
-                                        <div class="offset-lg-5 col-lg-3 resetBtn">
+                                        <div class="offset-5 col-3 col-sm-3 offset-md-5 col-md-3 offset-lg-5 col-lg-3 resetBtn">
                                             <button type="submit" class="btn btn-warning">Reset</button></div>
                                     </div>
                                 </div>
@@ -190,9 +190,9 @@
                                 </div>
                                 <div class="">
                                     <div class="row">
-                                        <div class="col-lg-6 mangUserBtnCont">
+                                        <div class="col-3 col-sm-3  col-md-6 col-lg-6 mangUserBtnCont">
                                             <button type="submit" class="btn btn-primary mangUserBtn">Manage Users</button></div>
-                                        <div class="offset-lg-2 col-lg-3 deactBtnCont">
+                                        <div class="offset-5 col-3 col-sm-3 offset-md-2 col-md-3 offset-lg-2 col-lg-3 deactBtnCont">
                                             <button type="submit" class="btn btn-warning deactBtn">De-Activate</button></div>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@
         </div>
     </div>
 
-    <div class="col-sm-3 col-md-3 col-lg-5 col-xl-3" id="filterRoles">
+    <div class="col-sm-5 col-md-5 col-lg-5 col-xl-3" id="filterRoles">
         <div class="row">
             <form class="FilterRolesForm">
                 <div class="filterFormHeader">
@@ -289,7 +289,7 @@
                             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                 <label class="calendarCont">Created date Range(From & To)</label>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6">
                                 <div class="input-group">
                                     <input id="uname" type="text" class="form-control fromInputs" name="uname" value="12-05-2020">
                                     <span class="input-group-addon">
@@ -297,7 +297,7 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6">
                                 <div class="input-group">
                                     <input id="uname" type="text" class="form-control fromInputs" name="uname" value="25-05-2020">
                                     <span class="input-group-addon">
@@ -314,7 +314,7 @@
                             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                 <label class="calendarCont">Modified Date Range(From & To)</label>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6">
                                 <div class="input-group">
                                     <input id="uname" type="text" class="form-control fromInputs" name="uname" value="12-05-2020">
                                     <span class="input-group-addon">
@@ -322,7 +322,7 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6">
                                 <div class="input-group">
                                     <input id="uname" type="text" class="form-control fromInputs" name="uname" value="25-05-2020">
                                     <span class="input-group-addon">
@@ -339,10 +339,10 @@
                             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                 <label class="calendarCont">Active</label>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                                 <span> <input type="checkbox" id="checkbox1" checked />  &nbsp; Yes</span>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                                 <span><input type="checkbox" /> &nbsp;  &nbsp;No</span>
                             </div>
 
@@ -351,9 +351,9 @@
                 </div>
                 <div class="formFooter">
                     <div class="row">
-                        <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3 createBtn">
+                        <div class="col-3 col-sm-3 col-md-6 col-lg-3 col-xl-3 createBtn">
                             <button type="submit" class="btn btn-primary">Filter</button></div>
-                        <div class="offset-lg-4 col-lg-3 offsetxl-4 col-xl-4 resetBtn">
+                        <div class="offset-4 col-3 col-sm-3 col-md-6 offset-lg-4 col-lg-3 offsetxl-4 col-xl-4 resetBtn">
                             <button type="submit" class="btn btn-warning ">Reset</button></div>
                     </div>
                 </div>
